- [fix] fixes for filters being reset. Previously filter button box would not update
- [fix] fix issue where if an rx2 container was hidden, other rx2 containers might not show
- [fix] fixed an issue for rx2 filters, where they would reset to the last used var high/low values
- [change] re-worked minimise/restore code for meter containers

## v2.10.3.6 Change Log - Release Candidate 2 (rc2) - includes rc1 changes
- [fix] fix missing legacy buttons that happened in rare cases
- [fix] fixed mode/band menu items shown in expanded view if the collapsed view settings were changed in setup. Very old bug
- [fix] fixed the display of band/mode buttons in collapsed view that were sometimes visible behind the lower main controls in rare cases
- [fix] andromeda button bar will hide if setup option is changed. Previously it was behind other controls and could be seen in rare cases on resize
- [fix] fixed issues where band/mode control would sometimes not show when starting in collapsed view

## v2.10.3.6 Change Log - Release Candidate 1 (rc1) - includes all changes since v2.10.3.5
- [add] total re-work of database management. There is now a database manager. I advise you to watch video : https://youtu.be/pwe3bd-tkGY
- [add] rotator can now be stopped. Hover mouse over arrow pivot point to see red circle. Click in circle and STOP will be sent. Note: reset the pstRotator commands if you are already using before this update
- [add] cache bypass option added to web image meter item
- [add] you can now select VFOA, VFOB or BOTH in the multimeter vfo control
- [add] auto height options for multimeter containers
- [add] cwx form does now not need focus to act on F1-F12 etc. Uncheck focus to enable this in the cwx form
- [add] rotator can now have a map. Check out OE3IDE's skin server pages
- [add] new button box meter controls for bands, modes and filters
- [add] rotator can now have the beam width alpha adjusted